Fixed scrolling bug on mobile devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,7 @@
 * @Author: Sebastian B. Mohr
 * @Date:   2020-08-07 16:24:28
 * @Last Modified by:   Sebastian
-* @Last Modified time: 2020-08-09 19:13:53
+* @Last Modified time: 2020-08-11 15:38:20
 */
 
 
@@ -131,7 +131,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-navigator-active {
-  overflow: hidden;
+  overflow-inline: auto;
 }
 
 #header.mobile-navigator-active{
@@ -513,6 +513,10 @@ section .no-padding{
   padding: 10px 24px 24px 10px;
   margin-top: -2px;
   position: relative;
+}
+
+.works-item figure figcaption{
+  color: rgba(51, 51, 51, 0.7)
 }
 
 .works-item figure {
